use gradle run, instead of idea application
use gradle application run, instead of idea application as shadowing libs break from being shadowed to limit jar size for jar patch size to not be ~10mb now ~1mb