@@ -27,6 +27,7 @@ buildscript {
     }
 }
 plugins {
+    id 'application'
     id "com.gradleup.shadow" version "8.3.6"
 }
 group = 'com.github.puzzle'
@@ -58,11 +59,11 @@ dependencies {
 
     ///////
 
-    shadow implementation("com.google.guava:guava:$guavaVersion")
+    shadow"com.google.guava:guava:$guavaVersion"
 //            {
 //        exclude (group: "com.google.common" , module: "google-collect")
 //    }
-    shadow(implementation "com.google.code.gson:gson:$gsonVersion")
+    shadow "com.google.code.gson:gson:$gsonVersion"
     implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
     implementation "org.lz4:lz4-java:1.8.0"
     implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
@@ -73,30 +74,37 @@ dependencies {
     implementation "com.github.Hangman:TuningFork:$tuningFork"
     implementation "io.netty:netty-all:4.1.24.Final"
 
-    shadow(implementation("org.reflections:reflections:$reflectionsVersion"))
-    shadow( implementation("com.mojang:brigadier:1.0.18"))
-    shadow( implementation 'org.apache.commons:commons-configuration2:2.11.0')
-    shadow(implementation 'org.apache.commons:commons-lang3:3.14.0')
-    shadow(implementation'org.apache.commons:commons-text:1.12.0')
-    shadow(implementation 'commons-beanutils:commons-beanutils:1.9.4')
-    shadow implementation('commons-logging:commons-logging:1.3.2')
-    shadow implementation('commons-io:commons-io:2.15.1')
-    shadow implementation("net.neoforged:bus:8.0.2")
-    shadow implementation("org.apache.logging.log4j:log4j-api:$log4jVersion")
-    shadow implementation("org.apache.logging.log4j:log4j-core:$log4jVersion")
-    shadow implementation("org.apache.logging.log4j:log4j-slf4j2-impl:$log4jVersion")
-    shadow implementation("org.slf4j:slf4j-api:2.0.17")
-    shadow implementation('org.jline:jline:3.25.0')
-    shadow implementation("org.ow2.asm:asm:9.8")
-    shadow implementation('org.fusesource.jansi:jansi:2.2.0')
-    shadow implementation("org.hjson:hjson:$hjsonVersion")
-    shadow implementation('org.jetbrains:annotations:24.0.0')
-    shadow(implementation"net.sf.jopt-simple:jopt-simple:$joptSimpleVersion")
+    shadow("org.reflections:reflections:$reflectionsVersion")
+    shadow("com.mojang:brigadier:1.0.18")
+    shadow 'org.apache.commons:commons-configuration2:2.11.0'
+    shadow 'org.apache.commons:commons-lang3:3.14.0'
+    shadow 'org.apache.commons:commons-text:1.12.0'
+    shadow 'commons-beanutils:commons-beanutils:1.9.4'
+    shadow 'commons-logging:commons-logging:1.3.2'
+    shadow 'commons-io:commons-io:2.15.1'
+    shadow"net.neoforged:bus:8.0.2"
+    shadow"org.apache.logging.log4j:log4j-api:$log4jVersion"
+    shadow"org.apache.logging.log4j:log4j-core:$log4jVersion"
+    shadow"org.apache.logging.log4j:log4j-slf4j2-impl:$log4jVersion"
+    shadow"org.slf4j:slf4j-api:2.0.17"
+    shadow'org.jline:jline:3.25.0'
+    shadow("org.ow2.asm:asm:9.8")
+    shadow'org.fusesource.jansi:jansi:2.2.0'
+    shadow"org.hjson:hjson:$hjsonVersion"
+    shadow('org.jetbrains:annotations:24.0.0')
+    shadow"net.sf.jopt-simple:jopt-simple:$joptSimpleVersion"
 //    implementation project(":api") //TODO: fix
 
 }
 
+tasks.named('runShadow', JavaExec) {
+}
 
+application {
+    mainClass = 'com.github.puzzle.paradox.loader.launch.Piece'
+    // Optionally, you can add default JVM arguments to the start scripts like this:
+    applicationDefaultJvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
+}
 javadoc {
 }
 tasks.jar {
@@ -191,6 +199,10 @@ jar {
                 "Main-Class": "com.github.puzzle.paradox.loader.launch.Piece",
                 "Multi-Release": true);
     }
+}
+
+tasks.runShadow {
+
 }
 processResources() {
 
